- Replace RubyObject with IRubyObject. - Remove some Ruby parameters. - Some cleanups.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@568 961051c9-f516-0410-bf72-c9f7e237a7b7