@@ -67,27 +67,51 @@ public class RubyKernel {
         kernelModule.defineMethod("chomp!", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "chomp_bang"));
         kernelModule.defineMethod("chomp", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "chomp"));
         kernelModule.defineMethod("split", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "split"));
-        kernelModule.defineMethod("scan", CallbackFactory.getSingletonMethod(RubyKernel.class, "scan", RubyObject.class));
-        kernelModule.defineMethod("load", CallbackFactory.getSingletonMethod(RubyKernel.class, "load", RubyString.class));
+        kernelModule.defineMethod(
+            "scan",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "scan", IRubyObject.class));
+        kernelModule.defineMethod(
+            "load",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "load", RubyString.class));
         //kernelModule.defineMethod("autoload", CallbackFactory.getSingletonMethod(RubyKernel.class, "autoload", RubyString.class));
         kernelModule.defineMethod("raise", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "raise"));
-        kernelModule.defineMethod("require", CallbackFactory.getSingletonMethod(RubyKernel.class, "require", RubyString.class));
-        kernelModule.defineMethod("global_variables", CallbackFactory.getSingletonMethod(RubyKernel.class, "global_variables"));
-        kernelModule.defineMethod("local_variables", CallbackFactory.getSingletonMethod(RubyKernel.class, "local_variables"));
+        kernelModule.defineMethod(
+            "require",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "require", RubyString.class));
+        kernelModule.defineMethod(
+            "global_variables",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "global_variables"));
+        kernelModule.defineMethod(
+            "local_variables",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "local_variables"));
         kernelModule.defineMethod("block_given?", CallbackFactory.getSingletonMethod(RubyKernel.class, "block_given"));
         kernelModule.defineMethod("iterator?", CallbackFactory.getSingletonMethod(RubyKernel.class, "block_given"));
         kernelModule.defineMethod("proc", CallbackFactory.getSingletonMethod(RubyKernel.class, "proc"));
         kernelModule.defineMethod("loop", CallbackFactory.getSingletonMethod(RubyKernel.class, "loop"));
-        kernelModule.defineMethod("eval", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "eval", RubyString.class));
+        kernelModule.defineMethod(
+            "eval",
+            CallbackFactory.getOptSingletonMethod(RubyKernel.class, "eval", RubyString.class));
         kernelModule.defineMethod("caller", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "caller"));
-        kernelModule.defineMethod("catch", CallbackFactory.getSingletonMethod(RubyKernel.class, "rbCatch", RubyObject.class));
-        kernelModule.defineMethod("throw", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "rbThrow", RubyObject.class));
+        kernelModule.defineMethod(
+            "catch",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "rbCatch", IRubyObject.class));
+        kernelModule.defineMethod(
+            "throw",
+            CallbackFactory.getOptSingletonMethod(RubyKernel.class, "rbThrow", IRubyObject.class));
         kernelModule.defineMethod("singleton_method_added", CallbackFactory.getNilMethod(1));
-        kernelModule.defineMethod("set_trace_func", CallbackFactory.getSingletonMethod(RubyKernel.class, "set_trace_func", RubyObject.class));
-        kernelModule.defineMethod("sleep", CallbackFactory.getSingletonMethod(RubyKernel.class, "sleep", RubyObject.class));
-        kernelModule.defineMethod("`", CallbackFactory.getSingletonMethod(RubyKernel.class, "backquote", RubyString.class));
+        kernelModule.defineMethod(
+            "set_trace_func",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "set_trace_func", IRubyObject.class));
+        kernelModule.defineMethod(
+            "sleep",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "sleep", IRubyObject.class));
+        kernelModule.defineMethod(
+            "`",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "backquote", RubyString.class));
         kernelModule.defineMethod("exit", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "exit"));
-        kernelModule.defineMethod("srand", CallbackFactory.getSingletonMethod(RubyKernel.class, "srand", RubyObject.class));
+        kernelModule.defineMethod(
+            "srand",
+            CallbackFactory.getSingletonMethod(RubyKernel.class, "srand", IRubyObject.class));
         kernelModule.defineMethod("rand", CallbackFactory.getOptSingletonMethod(RubyKernel.class, "rand"));
 
         kernelModule.defineAlias("lambda", "proc");
@@ -95,88 +119,85 @@ public class RubyKernel {
         return kernelModule;
     }
 
-
-    public static RubyObject open(Ruby ruby, RubyObject recv, RubyObject[] args) {
+    public static IRubyObject open(IRubyObject recv, IRubyObject[] args) {
         if (args[0].toString().startsWith("|")) {
             // +++
-            return ruby.getNil();
+            return recv.getRuntime().getNil();
             // ---
         }
-        return RubyFile.open(ruby, ruby.getClasses().getFileClass(), args);
+        return RubyFile.open(recv.getRuntime().getClasses().getFileClass(), args);
     }
 
-    public static RubyString gets(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        RubyArgsFile argsFile = (RubyArgsFile) ruby.getGlobalVar("$<");
+    public static RubyString gets(IRubyObject recv, IRubyObject[] args) {
+        RubyArgsFile argsFile = (RubyArgsFile) recv.getRuntime().getGlobalVar("$<");
 
         RubyString line = argsFile.internalGets(args);
 
-        ruby.setLastline(line);
+        recv.getRuntime().setLastline(line);
 
         return line;
     }
 
-    public static RubyObject p(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        RubyObject defout = ruby.getGlobalVar("$>");
+    public static IRubyObject p(IRubyObject recv, IRubyObject args[]) {
+        IRubyObject defout = recv.getRuntime().getGlobalVar("$>");
 
         for (int i = 0; i < args.length; i++) {
             if (args[i] != null) {
                 defout.callMethod("write", args[i].callMethod("inspect"));
-                defout.callMethod("write", RubyString.newString(ruby, "\n"));
+                defout.callMethod("write", RubyString.newString(recv.getRuntime(), "\n"));
             }
         }
-        return ruby.getNil();
+        return recv.getRuntime().getNil();
     }
 
+    public static IRubyObject puts(IRubyObject recv, IRubyObject args[]) {
+        IRubyObject defout = recv.getRuntime().getGlobalVar("$>");
 
-    public static RubyObject puts(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        RubyObject defout = ruby.getGlobalVar("$>");
+        RubyIO.puts(defout.toRubyObject(), args);
 
-        RubyIO.puts(ruby, defout, args);
-
-        return ruby.getNil();
+        return recv.getRuntime().getNil();
     }
 
-    public static RubyObject print(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        RubyObject defout = ruby.getGlobalVar("$>");
+    public static IRubyObject print(IRubyObject recv, IRubyObject args[]) {
+        IRubyObject defout = recv.getRuntime().getGlobalVar("$>");
 
-        RubyIO.print(ruby, defout, args);
+        RubyIO.print(defout.toRubyObject(), args);
 
-        return ruby.getNil();
+        return recv.getRuntime().getNil();
     }
 
-    public static RubyObject printf(Ruby ruby, RubyObject recv, RubyObject args[]) {
+    public static IRubyObject printf(IRubyObject recv, IRubyObject args[]) {
         if (args.length != 0) {
-            RubyObject defout = ruby.getGlobalVar("$>");
+            IRubyObject defout = recv.getRuntime().getGlobalVar("$>");
 
             if (!(args[0] instanceof RubyString)) {
                 defout = args[0];
 
-                RubyObject[] newArgs = new RubyObject[args.length - 1];
+                IRubyObject[] newArgs = new IRubyObject[args.length - 1];
                 System.arraycopy(args, 1, newArgs, 0, args.length - 1);
                 args = newArgs;
             }
 
-            RubyIO.printf(ruby, defout, args);
+            RubyIO.printf(defout.toRubyObject(), args);
         }
 
-        return ruby.getNil();
+        return recv.getRuntime().getNil();
     }
 
-
-    public static RubyString readline(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        RubyString line = gets(ruby, recv, args);
+    public static RubyString readline(IRubyObject recv, IRubyObject[] args) {
+        RubyString line = gets(recv, args);
 
         if (line.isNil()) {
-            throw new EOFError(ruby);
+            throw new EOFError(recv.getRuntime());
         }
 
         return line;
     }
 
-    public static RubyArray readlines(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        RubyArgsFile argsFile = (RubyArgsFile) ruby.getGlobalVar("$<");
+    public static RubyArray readlines(IRubyObject recv, IRubyObject[] args) {
+        RubyArgsFile argsFile = (RubyArgsFile) recv.getRuntime().getGlobalVar("$<");
 
-        RubyArray lines = RubyArray.newArray(ruby);
+        RubyArray lines = RubyArray.newArray(recv.getRuntime());
 
         RubyString line = argsFile.internalGets(args);
         while (!line.isNil()) {
@@ -194,7 +215,7 @@ public class RubyKernel {
      * @return value of $_ as String.
      */
     private static RubyString getLastlineString(Ruby ruby) {
-        RubyObject line = ruby.getLastline();
+        IRubyObject line = ruby.getLastline();
 
         if (line.isNil()) {
             throw new TypeError(ruby, "$_ value need to be String (nil given).");
@@ -205,84 +226,84 @@ public class RubyKernel {
         }
     }
 
-    public static RubyObject sub_bang(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        return getLastlineString(ruby).sub_bang(args);
+    public static IRubyObject sub_bang(IRubyObject recv, IRubyObject args[]) {
+        return getLastlineString(recv.getRuntime()).sub_bang(args);
     }
 
-    public static RubyObject sub(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        RubyString str = (RubyString) getLastlineString(ruby).dup();
+    public static IRubyObject sub(IRubyObject recv, IRubyObject args[]) {
+        RubyString str = (RubyString) getLastlineString(recv.getRuntime()).dup();
 
         if (!str.sub_bang(args).isNil()) {
-            ruby.setLastline(str);
+            recv.getRuntime().setLastline(str);
         }
 
         return str;
     }
 
-    public static RubyObject gsub_bang(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        return getLastlineString(ruby).gsub_bang(args);
+    public static IRubyObject gsub_bang(IRubyObject recv, IRubyObject args[]) {
+        return getLastlineString(recv.getRuntime()).gsub_bang(args);
     }
 
-    public static RubyObject gsub(Ruby ruby, RubyObject recv, RubyObject args[]) {
-        RubyString str = (RubyString) getLastlineString(ruby).dup();
+    public static IRubyObject gsub(IRubyObject recv, IRubyObject args[]) {
+        RubyString str = (RubyString) getLastlineString(recv.getRuntime()).dup();
 
         if (!str.gsub_bang(args).isNil()) {
-            ruby.setLastline(str);
+            recv.getRuntime().setLastline(str);
         }
 
         return str;
     }
 
-    public static RubyObject chop_bang(Ruby ruby, RubyObject recv) {
-        return getLastlineString(ruby).chop_bang();
+    public static IRubyObject chop_bang(IRubyObject recv) {
+        return getLastlineString(recv.getRuntime()).chop_bang();
     }
 
-    public static RubyObject chop(Ruby ruby, RubyObject recv) {
-        RubyString str = getLastlineString(ruby);
+    public static IRubyObject chop(IRubyObject recv) {
+        RubyString str = getLastlineString(recv.getRuntime());
 
         if (str.getValue().length() > 0) {
             str = (RubyString) str.dup();
             str.chop_bang();
-            ruby.setLastline(str);
+            recv.getRuntime().setLastline(str);
         }
 
         return str;
     }
 
-    public static RubyObject chomp_bang(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        return getLastlineString(ruby).chomp_bang(args);
+    public static IRubyObject chomp_bang(IRubyObject recv, IRubyObject[] args) {
+        return getLastlineString(recv.getRuntime()).chomp_bang(args);
     }
 
-    public static RubyObject chomp(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        RubyString str = getLastlineString(ruby);
+    public static IRubyObject chomp(IRubyObject recv, IRubyObject[] args) {
+        RubyString str = getLastlineString(recv.getRuntime());
         RubyString dup = (RubyString) str.dup();
 
         if (dup.chomp_bang(args).isNil()) {
             return str;
         } else {
-            ruby.setLastline(dup);
+            recv.getRuntime().setLastline(dup);
             return str;
         }
     }
 
-    public static RubyObject split(Ruby ruby, RubyObject recv, RubyObject[] args) {
-        return getLastlineString(ruby).split(args);
+    public static IRubyObject split(IRubyObject recv, IRubyObject[] args) {
+        return getLastlineString(recv.getRuntime()).split(args);
     }
 
-    public static RubyObject scan(Ruby ruby, RubyObject recv, RubyObject pattern) {
-        return getLastlineString(ruby).scan(pattern);
+    public static IRubyObject scan(IRubyObject recv, IRubyObject pattern) {
+        return getLastlineString(recv.getRuntime()).scan(pattern);
     }
 
-    public static RubyObject sleep(Ruby ruby, RubyObject recv, RubyObject seconds) {
+    public static IRubyObject sleep(IRubyObject recv, IRubyObject seconds) {
         try {
-            Thread.sleep((long)(RubyNumeric.numericValue(seconds).getDoubleValue() * 1000.0));
+            Thread.sleep((long) (RubyNumeric.numericValue(seconds).getDoubleValue() * 1000.0));
         } catch (InterruptedException iExcptn) {
         }
 
         return recv;
     }
 
-    public static RubyObject exit(Ruby ruby, RubyObject recv, RubyObject args[]) {
+    public static IRubyObject exit(IRubyObject recv, IRubyObject args[]) {
         int status = 0;
 
         if (args.length > 0) {
@@ -290,20 +311,20 @@ public class RubyKernel {
         }
 
         System.exit(status);
-        return ruby.getNil();
+        return recv.getRuntime().getNil();
     }
 
     /** Returns an Array with the names of all global variables.
      * 
      */
-    public static RubyArray global_variables(Ruby ruby, RubyObject recv) {
-        RubyArray globalVariables = RubyArray.newArray(ruby);
+    public static RubyArray global_variables(IRubyObject recv) {
+        RubyArray globalVariables = RubyArray.newArray(recv.getRuntime());
 
-        Iterator iter = ruby.globalVariableNames();
+        Iterator iter = recv.getRuntime().globalVariableNames();
         while (iter.hasNext()) {
             String globalVariableName = (String) iter.next();
 
-            globalVariables.append(RubyString.newString(ruby, globalVariableName));
+            globalVariables.append(RubyString.newString(recv.getRuntime(), globalVariableName));
         }
 
         return globalVariables;
@@ -312,57 +333,57 @@ public class RubyKernel {
     /** Returns an Array with the names of all local variables.
      * 
      */
-    public static RubyArray local_variables(Ruby ruby, RubyObject recv) {
-        RubyArray localVariables = RubyArray.newArray(ruby);
+    public static RubyArray local_variables(IRubyObject recv) {
+        RubyArray localVariables = RubyArray.newArray(recv.getRuntime());
 
-        if (ruby.getScope().getLocalNames() != null) {
-            for (int i = 2; i < ruby.getScope().getLocalNames().size(); i++) {
-                if (ruby.getScope().getLocalNames().get(i) != null) {
-                    localVariables.append(RubyString.newString(ruby, (String) ruby.getScope().getLocalNames().get(i)));
+        if (recv.getRuntime().getScope().getLocalNames() != null) {
+            for (int i = 2; i < recv.getRuntime().getScope().getLocalNames().size(); i++) {
+                if (recv.getRuntime().getScope().getLocalNames().get(i) != null) {
+                    localVariables.append(RubyString.newString(recv.getRuntime(), (String) recv.getRuntime().getScope().getLocalNames().get(i)));
                 }
             }
         }
 
-        Iterator dynamicNames = ruby.getDynamicNames().iterator();
+        Iterator dynamicNames = recv.getRuntime().getDynamicNames().iterator();
         while (dynamicNames.hasNext()) {
             String name = (String) dynamicNames.next();
-            localVariables.append(RubyString.newString(ruby, name));
+            localVariables.append(RubyString.newString(recv.getRuntime(), name));
         }
 
         return localVariables;
     }
 
-    public static RubyBoolean block_given(Ruby ruby, RubyObject recv) {
-        return RubyBoolean.newBoolean(ruby, ruby.isFBlockGiven());
+    public static RubyBoolean block_given(IRubyObject recv) {
+        return RubyBoolean.newBoolean(recv.getRuntime(), recv.getRuntime().isFBlockGiven());
     }
 
-    public static RubyObject sprintf(Ruby ruby, RubyObject recv, RubyObject args[]) {
+    public static IRubyObject sprintf(IRubyObject recv, IRubyObject args[]) {
         if (args.length == 0) {
-            throw new ArgumentError(ruby, "sprintf must have at least one argument");
+            throw new ArgumentError(recv.getRuntime(), "sprintf must have at least one argument");
         }
 
         RubyString str = RubyString.stringValue(args[0]);
 
-        RubyArray newArgs = RubyArray.create(ruby, null, args);
+        RubyArray newArgs = RubyArray.create(recv, args);
         newArgs.shift();
 
         return str.format(newArgs);
     }
 
-    public static RubyObject raise(Ruby ruby, RubyObject recv, RubyObject args[]) {
+    public static IRubyObject raise(IRubyObject recv, IRubyObject args[]) {
         switch (args.length) {
         case 0 :
         case 1 :
             if (args[0] instanceof RubyException) {
                 throw new RaiseException((RubyException) args[0]);
             } else {
-                throw new RaiseException(RubyException.newInstance(ruby, ruby.getExceptions().getRuntimeError(), args));
+                throw new RaiseException(RubyException.newInstance(recv.getRuntime(), recv.getRuntime().getExceptions().getRuntimeError(), args));
             }
         case 2 :
             RubyException excptn = (RubyException) args[0].callMethod("exception", args[1]);
             throw new RaiseException(excptn);
         default :
-            throw new ArgumentError(ruby, "wrong # of arguments");
+            throw new ArgumentError(recv.getRuntime(), "wrong # of arguments");
         }
     }
 
@@ -374,22 +395,23 @@ public class RubyKernel {
      * @param recv ruby object used to call require (any object will do and it won't be used anyway).
      * @param i2Load the name of the file to require
      **/
-    public static RubyObject require(Ruby ruby, RubyObject recv, RubyString i2Load) {
+    public static IRubyObject require(IRubyObject recv, RubyString i2Load) {
         //this is inefficient but it will do for now
-        RubyArray lFeatures = (RubyArray) ruby.getGlobalVar("$\"");
+        RubyArray lFeatures = (RubyArray) recv.getRuntime().getGlobalVar("$\"");
         if (lFeatures.index(i2Load).isNil()) {
-            load(ruby, recv, i2Load);
+            load(recv, i2Load);
             lFeatures.append(i2Load);
-            return ruby.getTrue();
+            return recv.getRuntime().getTrue();
         }
-        return ruby.getFalse();
+        return recv.getRuntime().getFalse();
     }
 
-    public static RubyObject load(Ruby ruby, RubyObject recv, RubyString i2Load) {
+    public static IRubyObject load(IRubyObject recv, RubyString i2Load) {
         if (i2Load.getValue().endsWith(".jar")) {
-            File jarFile = ruby.findFile(ruby, new File(i2Load.getValue()));
+            File jarFile = recv.getRuntime().findFile(recv.getRuntime(), new File(i2Load.getValue()));
             if (!jarFile.exists()) {
-                ruby.getRuntime().getErrorStream().println("[Error] Jarfile + \"" + jarFile.getAbsolutePath() + "\"not found.");
+                recv.getRuntime().getRuntime().getErrorStream().println(
+                    "[Error] Jarfile + \"" + jarFile.getAbsolutePath() + "\"not found.");
             } else {
                 /*try {
                   ClassLoader javaClassLoader = new URLClassLoader(new URL[] { jarFile.toURL()}, ruby.getJavaClassLoader());
@@ -399,16 +421,16 @@ public class RubyKernel {
             }
         } else {
             if (!i2Load.getValue().endsWith(".rb")) {
-                i2Load = RubyString.newString(ruby, i2Load.getValue() + ".rb");
+                i2Load = RubyString.newString(recv.getRuntime(), i2Load.getValue() + ".rb");
             }
-            File rbFile = ruby.findFile(ruby, new File(i2Load.getValue()));
-            ruby.getRuntime().loadFile(rbFile, false);
+            File rbFile = recv.getRuntime().findFile(recv.getRuntime(), new File(i2Load.getValue()));
+            recv.getRuntime().getRuntime().loadFile(rbFile, false);
         }
-        return ruby.getTrue();
+        return recv.getRuntime().getTrue();
     }
 
-    public static RubyObject eval(Ruby ruby, RubyObject recv, RubyString src, RubyObject[] args) {
-        RubyObject scope = args.length > 0 ? args[0] : ruby.getNil();
+    public static IRubyObject eval(IRubyObject recv, RubyString src, IRubyObject[] args) {
+        IRubyObject scope = args.length > 0 ? args[0] : recv.getRuntime().getNil();
         String file = "(eval)";
         int line = 1;
 
@@ -426,33 +448,33 @@ public class RubyKernel {
         src.checkSafeString();
         // ---
 
-        if (scope.isNil() && ruby.getFrameStack().getPrevious() != null) {
+        if (scope.isNil() && recv.getRuntime().getFrameStack().getPrevious() != null) {
             try {
                 // XXX
-                ruby.getFrameStack().push(ruby.getFrameStack().getPrevious());
+                recv.getRuntime().getFrameStack().push(recv.getRuntime().getFrameStack().getPrevious());
 
                 return recv.eval(src, scope, file, line);
             } finally {
-                ruby.getFrameStack().pop();
+                recv.getRuntime().getFrameStack().pop();
             }
         }
 
         return recv.eval(src, scope, file, line);
     }
 
-    public static RubyObject caller(Ruby ruby, RubyObject recv, RubyObject[] args) {
+    public static IRubyObject caller(IRubyObject recv, IRubyObject[] args) {
         int level = args.length > 0 ? RubyFixnum.fix2int(args[0]) : 1;
 
         if (level < 0) {
-            throw new ArgumentError(ruby, "negative level(" + level + ')');
+            throw new ArgumentError(recv.getRuntime(), "negative level(" + level + ')');
         }
 
-        return RaiseException.createBacktrace(ruby, level);
+        return RaiseException.createBacktrace(recv.getRuntime(), level);
     }
 
-    public static IRubyObject rbCatch(Ruby ruby, RubyObject recv, RubyObject tag) {
+    public static IRubyObject rbCatch(IRubyObject recv, IRubyObject tag) {
         try {
-            return ruby.yield(tag);
+            return recv.getRuntime().yield(tag);
         } catch (ThrowJump throwJump) {
             if (throwJump.getTag().equals(tag.toId())) {
                 return throwJump.getValue();
@@ -462,51 +484,48 @@ public class RubyKernel {
         }
     }
 
-    public static RubyObject rbThrow(Ruby ruby, RubyObject recv, RubyObject tag, RubyObject[] args) {
-        throw new ThrowJump(tag.toId(), args.length > 0 ? args[0] : ruby.getNil());
+    public static IRubyObject rbThrow(IRubyObject recv, IRubyObject tag, IRubyObject[] args) {
+        throw new ThrowJump(tag.toId(), args.length > 0 ? args[0] : recv.getRuntime().getNil());
     }
 
-    public static RubyObject set_trace_func(Ruby ruby, RubyObject recv, RubyObject trace_func) {
+    public static IRubyObject set_trace_func(IRubyObject recv, IRubyObject trace_func) {
         if (trace_func.isNil()) {
-            ruby.getRuntime().setTraceFunction(null);
+            recv.getRuntime().getRuntime().setTraceFunction(null);
         } else if (!(trace_func instanceof RubyProc)) {
-            throw new TypeError(ruby, "trace_func needs to be Proc.");
+            throw new TypeError(recv.getRuntime(), "trace_func needs to be Proc.");
         }
-        ruby.getRuntime().setTraceFunction((RubyProc) trace_func);
+        recv.getRuntime().getRuntime().setTraceFunction((RubyProc) trace_func);
         return trace_func;
     }
 
-    public static RubyProc proc(Ruby ruby, RubyObject recv) {
-        return RubyProc.newProc(ruby, ruby.getClasses().getProcClass());
+    public static RubyProc proc(IRubyObject recv) {
+        return RubyProc.newProc(recv.getRuntime(), recv.getRuntime().getClasses().getProcClass());
     }
 
-    public static RubyObject loop(Ruby ruby, RubyObject recv) {
+    public static IRubyObject loop(IRubyObject recv) {
         while (true) {
-            ruby.yield(ruby.getNil());
+            recv.getRuntime().yield(recv.getRuntime().getNil());
 
             Thread.yield();
         }
     }
 
-    public static RubyObject backquote(Ruby ruby, RubyObject recv, RubyString aString) {
+    public static IRubyObject backquote(IRubyObject recv, RubyString aString) {
         // XXX use other methods
         try {
             String lShellProp = System.getProperty("jruby.shell");
             Process aProcess;
             String lCommand = aString.toString();
             String lSwitch = "-c";
-            if (lShellProp != null)
-                {
-                    if (!lShellProp.endsWith("sh"))	//case windowslike
-                        lSwitch = "/c";
-                    //				System.out.println("command: " + lShellProp + " " + lSwitch +  " " + lCommand);
-                    aProcess = Runtime.getRuntime().exec(new String[] { lShellProp, lSwitch, lCommand});
-                }
-            else
-                {
-                    //				System.out.println("command: " + lCommand);
-                    aProcess = Runtime.getRuntime().exec(lCommand);
-                }
+            if (lShellProp != null) {
+                if (!lShellProp.endsWith("sh")) //case windowslike
+                    lSwitch = "/c";
+                //				System.out.println("command: " + lShellProp + " " + lSwitch +  " " + lCommand);
+                aProcess = Runtime.getRuntime().exec(new String[] { lShellProp, lSwitch, lCommand });
+            } else {
+                //				System.out.println("command: " + lCommand);
+                aProcess = Runtime.getRuntime().exec(lCommand);
+            }
 
             final StringBuffer sb = new StringBuffer();
             final BufferedReader reader = new BufferedReader(new InputStreamReader(aProcess.getInputStream()));
@@ -517,35 +536,35 @@ public class RubyKernel {
 
             aProcess.waitFor();
 
-            return RubyString.newString(ruby, sb.toString());
+            return RubyString.newString(recv.getRuntime(), sb.toString());
         } catch (Exception excptn) {
             excptn.printStackTrace();
 
-            return RubyString.newString(ruby, "");
+            return RubyString.newString(recv.getRuntime(), "");
         }
     }
 
-    public static RubyInteger srand(Ruby ruby, RubyObject recv, RubyObject arg) {
-        long oldRandomSeed = ruby.randomSeed;
+    public static RubyInteger srand(IRubyObject recv, IRubyObject arg) {
+        long oldRandomSeed = recv.getRuntime().randomSeed;
         RubyInteger integerSeed = (RubyInteger) arg.convertToType("Integer", "to_int", true);
-        ruby.randomSeed = integerSeed.getLongValue();
-        ruby.random.setSeed(ruby.randomSeed);
-        return RubyFixnum.newFixnum(ruby, oldRandomSeed);
+        recv.getRuntime().randomSeed = integerSeed.getLongValue();
+        recv.getRuntime().random.setSeed(recv.getRuntime().randomSeed);
+        return RubyFixnum.newFixnum(recv.getRuntime(), oldRandomSeed);
     }
 
-    public static RubyNumeric rand(Ruby ruby, RubyObject recv, RubyObject args[]) {
+    public static RubyNumeric rand(IRubyObject recv, IRubyObject args[]) {
         if (args.length == 0) {
-            double result = ruby.random.nextDouble();
-            return RubyFloat.newFloat(ruby, result);
+            double result = recv.getRuntime().random.nextDouble();
+            return RubyFloat.newFloat(recv.getRuntime(), result);
         } else if (args.length == 1) {
             RubyInteger integerCeil = (RubyInteger) args[0].convertToType("Integer", "to_int", true);
             long ceil = integerCeil.getLongValue();
             if (ceil > Integer.MAX_VALUE) {
                 throw new NotImplementedError("Random values larger than Integer.MAX_VALUE not supported");
             }
-            return RubyFixnum.newFixnum(ruby, ruby.random.nextInt((int) ceil));
+            return RubyFixnum.newFixnum(recv.getRuntime(), recv.getRuntime().random.nextInt((int) ceil));
         } else {
-            throw new ArgumentError(ruby, "wrong # of arguments(" + args.length + " for 1)");
+            throw new ArgumentError(recv.getRuntime(), "wrong # of arguments(" + args.length + " for 1)");
         }
     }
 }
